--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,12 @@
 buildscript {
+    ext {
+        gradleAvroPluginVersion = '0.12.0'
+    }
     repositories {
         jcenter()
     }
     dependencies {
-        classpath("com.commercehub.gradle.plugin:gradle-avro-plugin:${gradle_avro_plugin_version}")
+        classpath("com.commercehub.gradle.plugin:gradle-avro-plugin:${gradleAvroPluginVersion}")
     }
 }
 
@@ -16,6 +19,13 @@ allprojects {
     version "0.0.1"
     sourceCompatibility = 1.8
     targetCompatibility = 1.8
+
+    ext.avroVersion = '1.8.2'
+    ext.confluentVersion = '3.3.1'
+    ext.kafkaVersion = '0.11.0.1'
+    ext.log4jVersion = '2.9.1'
+    ext.scalaVersion = '2.11'
+    ext.slf4jVersion = '1.7.25'
 
     repositories {
         mavenCentral()
