--- a/build.gradle
+++ b/build.gradle
@@ -20,12 +20,14 @@ allprojects {
     sourceCompatibility = 1.8
     targetCompatibility = 1.8
 
-    ext.avroVersion = '1.8.2'
-    ext.confluentVersion = '3.3.1'
-    ext.kafkaVersion = '0.11.0.1'
-    ext.log4jVersion = '2.9.1'
-    ext.scalaVersion = '2.11'
-    ext.slf4jVersion = '1.7.25'
+    ext {
+        avroVersion = '1.8.2'
+        confluentVersion = '3.3.1'
+        kafkaVersion = '0.11.0.1'
+        log4jVersion = '2.9.1'
+        scalaVersion = '2.11'
+        slf4jVersion = '1.7.25'
+    }
 
     repositories {
         mavenCentral()
